--- a/css/estilo.css
+++ b/css/estilo.css
@@ -58,6 +58,7 @@ nav ul li a:hover {
 #conteudo {
     width: 710px;
     float: left;
+    margin-bottom: 20px;
 }
 
 aside {
@@ -65,6 +66,7 @@ aside {
     float: right;
     background: #ebe7dd;
     padding-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 section#visita {
@@ -90,6 +92,36 @@ section#galeria img {
     margin-top: 3px;
     width: 93px;
     height: 93px;
+}
+
+article#video {
+    float: left;
+    width: 310px;
+    margin-left: 25px;
+}
+
+article#mapa {
+    float: left;
+    width: 310px;
+    margin-left: 37px;
+}
+
+article#arcevo {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 25px;
+}
+
+article#descricao {
+    float: left;
+    width: 310px;
+    margin: 15px 0 0 37px;
+}
+
+h3 {
+    color: #227115;
+    margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 h4 {
@@ -119,4 +151,14 @@ input.botao {
 
 fieldset {
     border: none;
+}
+
+.clear {
+    clear: both;
+}
+
+footer {
+    padding: 20px 0 30px 0;
+    text-align: center;
+    background: url(../imagens/fundo-rodape.png) no-repeat center top;
 }
